Fixed horizontal scrolling

--- a/css/general.css
+++ b/css/general.css
@@ -1,12 +1,11 @@
 html {
   /* Overflow all the elements that overflow the viewport are hidden */
   overflow-x: hidden;
-  max-width: 100%;
 }
 
 body {
+  /* Only works if there is nothing absolutely positioned in relation to body */
   overflow-x: hidden;
-  max-width: 100%;
 }
 
 .margin-bottom-md {
