--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,8 @@ body {
   padding: 0 7.2rem;
   background-color: #e6e6e6;
   color: #27374d;
+
+  position: relative;
 }
 
 /* sticky navigation */
